<resources>
    <string name="app_name">coupangeats</string>

    <string name="main_btm_nav_item_1">홈</string>
    <string name="main_btm_nav_item_2">검색</string>
    <string name="main_btm_nav_item_3">즐겨찾기</string>
    <string name="main_btm_nav_item_4">주문내역</string>
    <string name="main_btm_nav_item_5">My이츠</string>

    <string name="login_email_front_txt">이메일</string>
    <string name="login_pwd_front_txt">비밀번호</string>
    <string name="login_btn">로그인</string>
    <string name="login_find_id">아이디 찾기</string>
    <string name="login_find_pwd">비밀번호 찾기</string>
    <string name="login_signup">회원가입</string>

    <string name="login_btm_sheet_title">이츠 시작하기</string>
    <string name="login_btm_sheet_simple_login">쿠팡 앱으로 간편 로그인</string>
    <string name="login_btm_sheet_email_login">쿠팡 아이디(이메일)로 로그인</string>
    <string name="login_btm_sheet_signup_hint">아직 회원이 아니신가요?</string>
    <string name="login_btm_sheet_signup">회원가입</string>

    <string name="signup_title">회원가입</string>
    <string name="signup_info_txt">회원정보를 입력해주세요</string>
    <string name="signup_email_wrong_hint">이메일을 입력하세요.</string>
    <string name="signup_already_have_email">이미 가입된 이메일 주소입니다. 다른 이메일을 입력하여 주세요.</string>
    <string name="signup_login">로그인</string>
    <string name="signup_find_pwd">비밀번호 찾기</string>
    <string name="signup_pwd_hint_1">영문/숫자/특수문자 2가지 이상 조합 (8~20자)</string>
    <string name="signup_pwd_hint_2">3개 이상 연속되거나 동일한 문자/숫자 제외</string>
    <string name="signup_pwd_hint_3">아이디(이메일) 제외</string>
    <string name="signup_pwd_hint_4">사용 가능한 비밀번호입니다.</string>
    <string name="signup_name_wrong_hint">이름을 정확히 입력하세요.</string>
    <string name="signup_phone_wrong_hint">휴대폰 번호를 정확하게 입력하세요.</string>
    <string name="signup_already_have_phone">아이디(이메일)로 가입된 휴대폰 번호입니다.</string>
    <string name="signup_auth_phone">휴대폰 인증</string>
    <string name="signup_terms_txt">쿠팡 서비스약관에 동의해주세요</string>
    <string name="signup_terms_all_agree_txt">모두 동의합니다.</string>
    <string name="signup_terms_all_agree_detail">동의에는 필수 및 선택 목적(광고성 정보 수신 포함)에 대한 동의가<br/>포함되어 있으며, 선택 목적의 동의를 거부하시는 경우에도 서비스<br/>이용이 가능합니다.</string>
    <string name="signup_terms_warn">필수 항목에 모두 동의해주세요</string>
    <string name="signup_terms_txt_1">[필수] 만 14세 이상입니다</string>
    <string name="signup_terms_txt_2">[필수] 쿠팡 이용약관 동의</string>
    <string name="signup_terms_txt_3">[필수] 전자금융거래 이용약관 동의</string>
    <string name="signup_terms_txt_4">[필수] 개인정보 수집 및 이용 동의</string>
    <string name="signup_terms_txt_5">[필수] 개인정보 제 3자 제공 동의</string>
    <string name="signup_terms_txt_6">[선택] 광고성 목적의 개인정보 수집 및 이용<br/>동의</string>
    <string name="signup_terms_txt_7">[선택] 광고성 정보 수신 동의</string>
    <string name="signup_terms_txt_8">[선택] 이메일 수신 동의</string>
    <string name="signup_terms_txt_9">[선택] SMS, MMS 수신 동의</string>
    <string name="signup_terms_txt_10">[선택] 앱 푸시 수신 동의</string>
    <string name="signup_complete">동의하고 가입하기</string>
    <string name="signup_rights">ⒸCoupang Corp. All rights reserved.</string>

    <string name="home_top_banner_all_event">이벤트 전체보기</string>
    <string name="home_res_title">골라먹는 맛집</string>
    <string name="home_res_option_all_menu">전체 메뉴</string>
    <string name="home_res_option_0">초기화</string>
    <string name="home_res_option_1">추천순</string>
    <string name="home_res_option_2">치타배달</string>
    <string name="home_res_option_3">배달비</string>
    <string name="home_res_option_4">최소주문</string>
    <string name="home_res_option_5">포장</string>
    <string name="home_res_option_6">할인쿠폰</string>
    <string name="home_res_option_7">주류</string>
    <string name="home_btm_recommend_title">아직 뭘 먹을지 고민이신가요?</string>
    <string name="home_btm_recommend_sub_title">메뉴 고민을 끝낼 쿠팡이츠의 맛집 리스트</string>
    <string name="home_btm_recommend_1">이츠 추천</string>
    <string name="home_btm_recommend_2">리뷰 최고</string>
    <string name="home_btm_recommend_3">주문 많은</string>
    <string name="home_btm_info_1">쿠팡(주) | 대표이사 : 박대준</string>
    <string name="home_btm_info_2">사업자 등록번호 : 120-88-00767 | 통신판매업신고 : 2017-</string>
    <string name="home_btm_info_3">서울송파-0680 | 서울시 송파구 송파대로 570</string>
    <string name="home_btm_info_4">쿠팡이츠 고객센터: 1670-9827| 이메일 문의:</string>
    <string name="home_btm_info_5">eatshelp@coupang.com |</string>
    <string name="home_btm_info_6">쿠팡은 통신판매중개자로서 통신판매의 당사자가 아니며, 판매자가</string>
    <string name="home_btm_info_7">등록한 상품 정보, 상품의 품질 및 거래에 대해서 일체의 책임을 지지</string>
    <string name="home_btm_info_8">않습니다. 이용약관 및 개인정보 처리방침| 호스팅 서비스제공자: 쿠팡(주)</string>
    <string name="home_btm_info_9">|</string>
    <string name="home_btm_info_10">사업자정보확인</string>

    <string name="item_home_horizontal_list_footer_txt">더보기</string>

    <string name="item_home_option_recommend_title">매장 정렬</string>
    <string name="item_home_option_recommend_1">추천순</string>
    <string name="item_home_option_recommend_2">주문많은순</string>
    <string name="item_home_option_recommend_3">가까운순</string>
    <string name="item_home_option_recommend_4">별점높은순</string>
    <string name="item_home_option_recommend_5">신규매장순</string>

    <string name="item_home_option_delivery_title">배달비</string>
    <string name="item_home_option_delivery_sub_status">더 멀리있는 매장까지 볼 수 있어요!</string>
    <string name="item_home_option_delivery_1">무료배달</string>
    <string name="item_home_option_delivery_2">1,000</string>
    <string name="item_home_option_delivery_3">2,000</string>
    <string name="item_home_option_delivery_4">3,000</string>
    <string name="item_home_option_delivery_5">전체</string>
    <string name="item_home_option_delivery_ok">적용하기</string>

    <string name="item_home_option_min_price_title">최소주문</string>
    <string name="item_home_option_min_price_1">5,000</string>
    <string name="item_home_option_min_price_2">10,000</string>
    <string name="item_home_option_min_price_3">12,000</string>
    <string name="item_home_option_min_price_4">15,000</string>
    <string name="item_home_option_min_price_5">전체</string>
    <string name="item_home_option_min_price_ok">적용하기</string>

    <string name="location_setting_title">주소 설정</string>
    <string name="location_setting_present">현재 위치로 주소 찾기</string>

    <string name="store_list_category_1">추천메뉴</string>
    <string name="store_list_category_2">세트메뉴</string>
    <string name="store_list_category_3">피자메뉴</string>
    <string name="store_list_category_4">비밀메뉴</string>

    <string name="store_delivery_time_txt">도착까지</string>
    <string name="store_delivery_info">매장•원산지정보</string>
    <string name="store_delivery_fee_txt">배달비</string>
    <string name="store_delivery_min_price_txt">최소주문</string>

    <string name="store_pack_time_txt">포장까지</string>
    <string name="store_pack_address">매장주소</string>

    <string name="store_menu_allergy">알레르기/영양성분 정보 보기</string>
    <string name="store_menu_price">가격</string>
    <string name="store_menu_count">수량</string>

</resources>